--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -380,7 +380,7 @@ footer > div.social-icon {
     display: none;
   }
   header.food-page {
-    background: #eee url(../images/food-02.jpg) no-repeat center; /* top center bottom - 1/3 of the image full height */
+    background: #eee url(../images/9f958841-0e23-4799-845c-9b967bcb1b3e.jpg) no-repeat center; /* top center bottom - 1/3 of the image full height */
     background-size: cover;
     height: 270px;
   }
